[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"


[[bin]]
name = "day_1"           # The name of the target.
path = "src/day_1.rs"    # The source file of the target.

[[bin]]
name = "day_2"           # The name of the target.
path = "src/day_2.rs"    # The source file of the target.

[[bin]]
name = "day_3"           # The name of the target.
path = "src/day_3.rs"    # The source file of the target.

[[bin]]
name = "day_4"           # The name of the target.
path = "src/day_4.rs"    # The source file of the target.
